:hammer: FIX: overflow in css

--- a/style.css
+++ b/style.css
@@ -6,11 +6,7 @@
 
 body,
 html {
-  height: 100%;
-  width: 100%;
-}
-
-canvas {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
